		  the plugin was unloaded. And did I mention this only happened
		  to a few classes, not all?
		- the "EditPaneUpdate" message is not sent when focusing a
		  different view, so remove the code that handled that (it was
		  causing weird events to be sent when the user had a split pane,
		  though). I'll have to find a different way to handle that case
		  (WindowListener?).

	[alan ezust]
        - add nodeSelected() to ProjectViewerEventListener

VERSION 2.1.0
	[marcelo vanzin]
		This version provides some API incompatibilities with other versions,
		so the version number is being bumped up a little bit.

		Feature changes:
		- dropped jEdit 4.1 compatibility (with related code cleanups)
		- clean up inactive projects when switching from "All Projects" view
		- use directory name as project name when creating project, if no
		  name has been provided
		- use current project's root's parent (or buffer path) as default path
		  when creating new project
		- option to automatically import newly created files that are under
		  the project root
		- can re-import single directories; tree state is maintained after
		  re-importing (may not work perfectly)
		- tree actions now can be accessed by jEdit's action mechanism; it's
		  not automatic, though, actions have to be manually added to the
		  actions.xml file.
		- added CompactView mode contributed by Francis Dobi
		- projects now are active in a view even if no dockable is visible if
		  the user uses the plugin menu. This means that the user doesn't need
		  to open the dockable to run (most of) the actions in PV's plugin
		  menu. Made sure that the actions are prepared for this case.
		- 4.2-style API to load custom node handlers.
		- Added API to allow other plugins to add custom file filters to the
		  import dialogs of Project Viewer. Also made the file filter choosing
		  method more generic so it can be used in more places.
		- When asking to import a new file from a buffer save, show an option